# dgread

./: .gitignore  CMakeLists.txt  LICENSE  MIGRATION.md  README.md
.github/workflows/: python_wheels.yml
MATLAB/dg_read/: Makefile.macos  buildmac.m  dfutils.c  dg_read.c  dg_read.cpp  dg_read.mexa64  dg_read.mexmaci64  dg_read.mexw32  dg_read.mexw64  dynio.c  dynio.h  flip.c  liblz4_static.lib  liblz4_static64.lib  lz4utils.c  zlib64.lib
R/: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/R/: dgread.R
R/dgread/: DESCRIPTION  NAMESPACE
R/dgread/R/: dgread.R
R/dgread/chm/: 00Index.html  dg.fromString.html  dg.get.html  dgread.chm  dgread.hhp  dgread.toc  read.dgz.html
R/dgread/data/: .RData  .Rhistory  test.dgz
R/dgread/man/: dg.fromString.Rd  dg.get.Rd  read.dgz.Rd
R/dgread/src/: Makedeps  Makefile.win  Makevars  Makevars.in  Makevars.win  df.d  dfutils.d  dgread.d  dgread_res.rc  dynio.c  dynio.d  flip.c  flip.d
R/dgread/tests/: dgz.R  loaddata.R
R/inst/extdata/: sample.dgz
R/man/: dg.get.Rd  dgread-package.Rd  read.dgz.Rd
R/src/: dgread.c  dynio.c  flipfuncs.c  lz4utils.c  utilc.h
c/: CMakeLists.txt  README.md
c/data/: j_cue_saccade_052209009.dgz  normals.lz4
c/src/: df.c  dfutils.c  dynio.c
c/test/: CMakeLists.txt
c/test/src/: testdgread.c
cmake/: dg.pc.in
matlab/: README.md  build_dgread.m  dg_read.cpp
python/: MANIFEST.in  README.md  dgread.c  pyproject.toml  setup.py
python/dgread/: Makefile.win32  Makefile.win64  README.md  df.c  dgread.c  dgread.def  dgread.exp  dgread.lib  dgread27.def  dynio.h  flip.c  ints.dgz  j_cue_saccade_052209009.dg  lz4utils.c  make64.bat  panda_tcl.py  pyproject.toml  setup.cfg  setup.py  setup_win.py  testdgread  testdgread.c  testdgread.py  utilc.h  z.lib
python/dgread/dgread.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/dgread/old/: C_array.c.txt  C_arraytest.h  dgread.c.R
python/dgread/old_setups/: setup_macos.py  setup_macos_26.py  setup_macos_anaconda.py  setup_macos_python3.py  setup_oscar.py  setup_ubuntu_python3.py  setup_unix.py  setup_win32.py  setup_win32_anaconda.py  setup_win32_canopy.py  setup_win64.py  setup_win64_36.py  setup_win64_anaconda.py
python/dgread/testdgread.dSYM/Contents/: Info.plist
python/dgread/testdgread.dSYM/Contents/Resources/DWARF/: testdgread
python/src/: dgread_utils.py
src/core/: README.md  df.c  dfutils.c  dynio.c  dynio.h  flipfuncs.h
src/lz4/: README.md
tests/: CMakeLists.txt
tests/data/: normals.dgz  s_sc_cl_01.051.dgz  testdata.dgz
