[build-system]
requires = ["setuptools>=61", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "dgread"
version = "1.1.0"
description = "Fast reader for dg/dgz dynamic group data files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "David Sheinberg", email = "david_sheinberg@brown.edu"},
]
keywords = ["data", "neuroscience", "dynamic-groups", "dg", "dgz", "science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.19",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = [
    "build",
    "twine",
    "pytest",
    "cibuildwheel",
]
all = ["dgread[pandas,dev]"]

[project.urls]
Homepage = "https://github.com/SheinbergLab/dgread"
Documentation = "https://github.com/SheinbergLab/dgread#readme"
Repository = "https://github.com/SheinbergLab/dgread"
Issues = "https://github.com/SheinbergLab/dgread/issues"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["dgread_utils"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
before-build = "yum install -y zlib-devel 2>/dev/null || apt-get update && apt-get install -y zlib1g-dev || true"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
testpaths = ["tests"]
