[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dgread"
version = "1.0.2"
requires-python = ">= 3.6"
dependencies = [
    "build>=0.9.0",
    "numpy>=1.19.5",
    "setuptools>=59.6.0",
    "twine>=3.8.0",
]

[tool.setuptools]
py-modules = []
